--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   dartz:
   flutter_bloc: ^8.1.3
   get_it: ^7.2.0
+  google_nav_bar: ^5.0.6
+  blurrycontainer: ^1.0.2
+  awesome_dialog:
 
 dev_dependencies:
   flutter_test:
